--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,160 @@ img {
 	fill: var(--ourTeamBack--collor);
 	background: var(--navy-collor);
 }
+
+form {
+	display: flex;
+	flex-direction: column;
+}
+
+.form-title {
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	text-align: center;
+
+	margin-top: 52px;
+	margin-bottom: 16px;
+}
+.form-group {
+	position: relative;
+}
+.form-group:not(:last-child) {
+	margin-bottom: 8px;
+}
+.inpute-name {
+	display: flex;
+	margin-bottom: 4px;
+	margin-left: 4px;
+
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.01em;
+	color: var(--customer--no--active--collor);
+}
+.label-modal input {
+	position: relative;
+	min-width: 360px;
+	min-height: 40px;
+	padding: 8px 16px;
+	padding-left: 38px;
+
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: 0.04em;
+
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+
+	transition: border 450ms cubic-bezier(0.4, 0, 0.2, 1), fill 450ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.label-modal input:focus,
+textarea:focus {
+	border: 1px solid rgba(2, 103, 255, 0.815);
+
+	outline: none;
+}
+.label-modal input:focus + .input-span-icon > .input-icon {
+	fill: rgba(2, 103, 255, 0.815);
+}
+.input-span-icon {
+	position: absolute;
+	left: 15px;
+	top: 43%;
+}
+
+textarea {
+	transition: border 450ms cubic-bezier(0.4, 0, 0.2, 1);
+
+	resize: none;
+	min-width: 360px;
+	min-height: 120px;
+	padding: 8px 16px;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+}
+.modal-textarea {
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.7;
+	letter-spacing: 0.04em;
+}
+
+.label-checkbox {
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.7;
+	letter-spacing: 0.04em;
+
+	color: #8e8f99;
+}
+.checkbox:checked + .checkbox-span-check {
+	background-color: rgba(2, 103, 255, 0.815);
+	border-color: rgba(2, 103, 255, 0.815);
+}
+.checkbox:checked + .checkbox-span-check .checkbox-icon {
+	fill: var(--body-collor);
+}
+.checkbox {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+
+	position: absolute;
+}
+.checkbox-span-check {
+	transition: background-color 450ms cubic-bezier(0.4, 0, 0.2, 1), border-color 450ms cubic-bezier(0.4, 0, 0.2, 1),
+		fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+
+	width: 16px;
+	height: 16px;
+	border: 1.25px solid var(--navy-collor);
+	border-radius: 2px;
+	margin-right: 8px;
+}
+.checkbox-icon {
+	fill: transparent;
+}
+.button-send {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+
+	min-width: 169px;
+	height: 56px;
+	margin: 0 auto 0 auto;
+	padding: 16px 32px;
+
+	display: inline-block;
+	align-items: center;
+	text-align: center;
+	cursor: pointer;
+	margin-top: 20px;
+
+	color: var(--add-text--collor);
+	background: var(--body-collor);
+	border: none;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+
+	transition-property: color, background;
+	transition-duration: 450ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-send:is(:hover, :focus) {
+	background: rgba(2, 103, 255, 0.815);
+	color: var(--body-collor);
+}
+
 /* modal */
 /* hero */
 
@@ -485,6 +639,9 @@ img {
 	margin-top: 16px;
 	width: 264px;
 }
+.footer-div-second {
+	margin-right: 80px;
+}
 .footer-text-social {
 	font-size: 16px;
 	font-weight: 500;
@@ -522,6 +679,70 @@ img {
 .footer-svg {
 	width: 24px;
 	height: 24px;
+}
+.footer-form {
+	display: flex;
+}
+.foter-subject-two {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: var(--footer--text--border--collor);
+	margin-bottom: 16px;
+	letter-spacing: 0.02em;
+	display: flex;
+}
+.foter-subject-two input:focus {
+	border: 1px solid rgba(2, 103, 255, 0.815);
+}
+.input-footer {
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 2;
+	letter-spacing: 0.04em;
+
+	display: flex;
+
+	width: 264px;
+	height: 40px;
+	border: 1px solid var(--body-collor);
+	background-color: transparent;
+	color: var(--body-collor);
+	border-radius: 4px;
+	padding-left: 16px;
+	outline: transparent;
+}
+
+.button-subscribe {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	align-items: center;
+
+	color: var(--body-collor);
+	background-color: var(--blue--text--collor);
+	border: none;
+	border-radius: 4px;
+	margin-left: 24px;
+	padding: 8px 24px;
+	gap: 16px;
+	cursor: pointer;
+
+	transition-property: background;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-subscribe:is(:hover, :focus) {
+	background: rgb(36, 200, 255);
+	box-shadow: 0 0 30px rgba(77, 133, 238, 0.3);
 }
 /* footer */
 
